// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`screens tests DetailsItem must renders correctly 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "marginTop": 15,
      "width": "100%",
    }
  }
>
  <Text
    style={
      Object {
        "color": "#ccc",
        "fontSize": 21,
        "fontWeight": "bold",
        "marginRight": 5,
      }
    }
  >
    title: 
  </Text>
  <Text
    style={
      Object {
        "color": "#ccc",
        "flex": 1,
        "fontSize": 20,
      }
    }
  >
    value
  </Text>
</View>
`;

exports[`screens tests MovieScreen must display loading indicator 1`] = `
<RCTScrollView
  bounces={false}
  contentContainerStyle={
    Object {
      "alignItems": "center",
    }
  }
  style={
    Object {
      "backgroundColor": "#131d3d",
      "flex": 1,
      "paddingHorizontal": 16,
    }
  }
>
  <View>
    <Text
      style={
        Object {
          "color": "#ccc",
          "fontFamily": "Arial",
          "fontSize": 32,
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
    >
      Title
    </Text>
    <View
      style={
        Object {
          "backgroundColor": "#1e3166",
          "borderColor": "#1e3166",
          "borderRadius": 8,
          "borderWidth": 4,
          "height": 1027.6,
          "marginBottom": 15,
          "marginTop": 15,
          "maxHeight": 443,
          "maxWidth": 300,
          "width": 734,
        }
      }
    >
      <Image
        onError={[Function]}
        onLoad={[Function]}
        onLoadEnd={[Function]}
        onLoadStart={[Function]}
        onProgress={[Function]}
        resizeMode="contain"
        source={
          Object {
            "uri": "http://",
          }
        }
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            undefined,
          ]
        }
      />
      <View
        style={
          Object {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <ActivityIndicator
          animating={true}
          color="#e59f2b"
          hidesWhenStopped={true}
          size="large"
        />
      </View>
    </View>
    <ActivityIndicator
      animating={true}
      color="#e59f2b"
      hidesWhenStopped={true}
      size="large"
    />
  </View>
</RCTScrollView>
`;

exports[`screens tests MovieScreen must renders correctly with all props 1`] = `
<RCTScrollView
  bounces={false}
  contentContainerStyle={
    Object {
      "alignItems": "center",
    }
  }
  style={
    Object {
      "backgroundColor": "#131d3d",
      "flex": 1,
      "paddingHorizontal": 16,
    }
  }
>
  <View>
    <Text
      style={
        Object {
          "color": "#ccc",
          "fontFamily": "Arial",
          "fontSize": 32,
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
    >
      Title
    </Text>
    <View
      style={
        Object {
          "backgroundColor": "#1e3166",
          "borderColor": "#1e3166",
          "borderRadius": 8,
          "borderWidth": 4,
          "height": 1027.6,
          "marginBottom": 15,
          "marginTop": 15,
          "maxHeight": 443,
          "maxWidth": 300,
          "width": 734,
        }
      }
    >
      <Image
        onError={[Function]}
        onLoad={[Function]}
        onLoadEnd={[Function]}
        onLoadStart={[Function]}
        onProgress={[Function]}
        resizeMode="contain"
        source={
          Object {
            "uri": "http://",
          }
        }
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            undefined,
          ]
        }
      />
      <View
        style={
          Object {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <ActivityIndicator
          animating={true}
          color="#e59f2b"
          hidesWhenStopped={true}
          size="large"
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "marginTop": 15,
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#ccc",
            "fontSize": 21,
            "fontWeight": "bold",
            "marginRight": 5,
          }
        }
      >
        Ratings: 
      </Text>
      <View>
        <View>
          <Text
            style={
              Object {
                "color": "#ccc",
                "fontSize": 20,
                "marginRight": 5,
                "textDecorationLine": "underline",
              }
            }
          >
            source
          </Text>
          <Text
            style={
              Object {
                "color": "#ccc",
                "flex": 1,
                "fontSize": 21,
                "fontWeight": "bold",
                "marginVertical": 3,
              }
            }
          >
            value
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "marginTop": 15,
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#ccc",
            "fontSize": 21,
            "fontWeight": "bold",
            "marginRight": 5,
          }
        }
      >
        Genre: 
      </Text>
      <Text
        style={
          Object {
            "color": "#ccc",
            "flex": 1,
            "fontSize": 20,
          }
        }
      >
        Genre
      </Text>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "marginTop": 15,
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#ccc",
            "fontSize": 21,
            "fontWeight": "bold",
            "marginRight": 5,
          }
        }
      >
        Director: 
      </Text>
      <Text
        style={
          Object {
            "color": "#ccc",
            "flex": 1,
            "fontSize": 20,
          }
        }
      >
        Director
      </Text>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "marginTop": 15,
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#ccc",
            "fontSize": 21,
            "fontWeight": "bold",
            "marginRight": 5,
          }
        }
      >
        Cast: 
      </Text>
      <Text
        style={
          Object {
            "color": "#ccc",
            "flex": 1,
            "fontSize": 20,
          }
        }
      >
        Cast
      </Text>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "marginTop": 15,
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#ccc",
            "fontSize": 21,
            "fontWeight": "bold",
            "marginRight": 5,
          }
        }
      >
        Plot: 
      </Text>
      <Text
        style={
          Object {
            "color": "#ccc",
            "flex": 1,
            "fontSize": 20,
          }
        }
      >
        Plot
      </Text>
    </View>
  </View>
</RCTScrollView>
`;

exports[`screens tests Rating must renders correctly 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "marginTop": 15,
      "width": "100%",
    }
  }
>
  <Text
    style={
      Object {
        "color": "#ccc",
        "fontSize": 21,
        "fontWeight": "bold",
        "marginRight": 5,
      }
    }
  >
    Ratings: 
  </Text>
  <View>
    <View>
      <Text
        style={
          Object {
            "color": "#ccc",
            "fontSize": 20,
            "marginRight": 5,
            "textDecorationLine": "underline",
          }
        }
      >
        source
      </Text>
      <Text
        style={
          Object {
            "color": "#ccc",
            "flex": 1,
            "fontSize": 21,
            "fontWeight": "bold",
            "marginVertical": 3,
          }
        }
      >
        value
      </Text>
    </View>
  </View>
</View>
`;

exports[`screens tests SearchResultItem must renders correctly with poster 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
      "flexDirection": "column-reverse",
      "height": 200,
      "marginBottom": 20,
      "opacity": 1,
      "overflow": "hidden",
    }
  }
  testID="t1"
>
  <View
    style={
      Object {
        "backgroundColor": "#1e3166",
        "borderRadius": 5,
        "flexDirection": "row",
        "height": 165,
        "paddingHorizontal": 16,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#131d3d",
          "borderRadius": 8,
          "height": 180,
          "marginTop": -35,
          "width": 122,
        }
      }
    >
      <Image
        onError={[Function]}
        onLoad={[Function]}
        onLoadEnd={[Function]}
        onLoadStart={[Function]}
        onProgress={[Function]}
        resizeMode="contain"
        source={
          Object {
            "uri": "http://",
          }
        }
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            undefined,
          ]
        }
      />
      <View
        style={
          Object {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <ActivityIndicator
          animating={true}
          color="#e59f2b"
          hidesWhenStopped={true}
          size="large"
        />
      </View>
    </View>
    <Text
      style={
        Object {
          "color": "#ccc",
          "flex": 1,
          "fontSize": 20,
          "fontWeight": "bold",
          "marginHorizontal": 16,
          "marginVertical": 16,
        }
      }
    >
      Test
    </Text>
  </View>
</View>
`;

exports[`screens tests SearchResultItem must renders correctly without poster 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
      "flexDirection": "column-reverse",
      "height": 200,
      "marginBottom": 20,
      "opacity": 1,
      "overflow": "hidden",
    }
  }
  testID="t1"
>
  <View
    style={
      Object {
        "backgroundColor": "#1e3166",
        "borderRadius": 5,
        "flexDirection": "row",
        "height": 165,
        "paddingHorizontal": 16,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#131d3d",
          "borderRadius": 8,
          "flexDirection": "column",
          "height": 180,
          "justifyContent": "center",
          "marginTop": -35,
          "width": 122,
        }
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "fontSize": 50,
            },
            null,
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
    <Text
      style={
        Object {
          "color": "#ccc",
          "flex": 1,
          "fontSize": 20,
          "fontWeight": "bold",
          "marginHorizontal": 16,
          "marginVertical": 16,
        }
      }
    >
      Test
    </Text>
  </View>
</View>
`;

exports[`screens tests SearchScreen must display searchErrorMessage if error even if movies presented 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#131d3d",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#1e3166",
        "borderRadius": 5,
        "flexDirection": "row",
        "marginHorizontal": 16,
        "marginTop": 25,
        "minHeight": 60,
        "padding": 16,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#e59f2b",
          "fontSize": 21,
          "fontWeight": "bold",
        }
      }
    >
      Error
    </Text>
  </View>
</View>
`;

exports[`screens tests SearchScreen must render loader if searching even if searchErrorMessage and movies presented 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#131d3d",
      "flex": 1,
    }
  }
>
  <ActivityIndicator
    animating={true}
    color="#e59f2b"
    hidesWhenStopped={true}
    size="large"
  />
</View>
`;

exports[`screens tests SearchScreen must render movies list 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#131d3d",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    ListFooterComponent={null}
    contentContainerStyle={
      Object {
        "paddingBottom": 25,
      }
    }
    data={
      Array [
        Object {
          "id": "t1",
          "poster": "http://",
          "title": "Test",
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onEndReachedThreshold={0.3}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Object {
        "paddingHorizontal": 16,
        "paddingTop": 25,
      }
    }
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flex": 1,
              "flexDirection": "column-reverse",
              "height": 200,
              "marginBottom": 20,
              "opacity": 1,
              "overflow": "hidden",
            }
          }
          testID="t1"
        >
          <View
            style={
              Object {
                "backgroundColor": "#1e3166",
                "borderRadius": 5,
                "flexDirection": "row",
                "height": 165,
                "paddingHorizontal": 16,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#131d3d",
                  "borderRadius": 8,
                  "height": 180,
                  "marginTop": -35,
                  "width": 122,
                }
              }
            >
              <Image
                onError={[Function]}
                onLoad={[Function]}
                onLoadEnd={[Function]}
                onLoadStart={[Function]}
                onProgress={[Function]}
                resizeMode="contain"
                source={
                  Object {
                    "uri": "http://",
                  }
                }
                style={
                  Array [
                    Object {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    },
                    undefined,
                  ]
                }
              />
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <ActivityIndicator
                  animating={true}
                  color="#e59f2b"
                  hidesWhenStopped={true}
                  size="large"
                />
              </View>
            </View>
            <Text
              style={
                Object {
                  "color": "#ccc",
                  "flex": 1,
                  "fontSize": 20,
                  "fontWeight": "bold",
                  "marginHorizontal": 16,
                  "marginVertical": 16,
                }
              }
            >
              Test
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`screens tests SearchScreen must render movies list and bottom loader 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#131d3d",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    ListFooterComponent={<LoadingIndicator />}
    contentContainerStyle={
      Object {
        "paddingBottom": 25,
      }
    }
    data={
      Array [
        Object {
          "id": "t1",
          "poster": "http://",
          "title": "Test",
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onEndReachedThreshold={0.3}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Object {
        "paddingHorizontal": 16,
        "paddingTop": 25,
      }
    }
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flex": 1,
              "flexDirection": "column-reverse",
              "height": 200,
              "marginBottom": 20,
              "opacity": 1,
              "overflow": "hidden",
            }
          }
          testID="t1"
        >
          <View
            style={
              Object {
                "backgroundColor": "#1e3166",
                "borderRadius": 5,
                "flexDirection": "row",
                "height": 165,
                "paddingHorizontal": 16,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#131d3d",
                  "borderRadius": 8,
                  "height": 180,
                  "marginTop": -35,
                  "width": 122,
                }
              }
            >
              <Image
                onError={[Function]}
                onLoad={[Function]}
                onLoadEnd={[Function]}
                onLoadStart={[Function]}
                onProgress={[Function]}
                resizeMode="contain"
                source={
                  Object {
                    "uri": "http://",
                  }
                }
                style={
                  Array [
                    Object {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    },
                    undefined,
                  ]
                }
              />
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <ActivityIndicator
                  animating={true}
                  color="#e59f2b"
                  hidesWhenStopped={true}
                  size="large"
                />
              </View>
            </View>
            <Text
              style={
                Object {
                  "color": "#ccc",
                  "flex": 1,
                  "fontSize": 20,
                  "fontWeight": "bold",
                  "marginHorizontal": 16,
                  "marginVertical": 16,
                }
              }
            >
              Test
            </Text>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
      >
        <ActivityIndicator
          animating={true}
          color="#e59f2b"
          hidesWhenStopped={true}
          size="large"
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;
